--- a/src/styles/index-min.css
+++ b/src/styles/index-min.css
@@ -1,1 +1,1 @@
-*{padding:0;box-sizing:border-box;margin:0;}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@300&display=swap');*{padding:0;box-sizing:border-box;margin:0;}
